add schema for the restaurant owner create and update
